fixed bug in dispalying navbar on mobile

--- a/src/scss/elements/_navbar.scss
+++ b/src/scss/elements/_navbar.scss
@@ -1,3 +1,11 @@
+.navbar-container {
+  position: absolute;
+  top: 3rem;
+  left: 0;
+  background-color: $white;
+  width: 100vw;
+}
+
 .menu {
 
   li {
